...
                                <state key="normal" title="Choix joueur 1"/>
                                <connections>
                                    <segue destination="OxD-9N-BUZ" kind="show" id="BNc-0p-xXz"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6t-aq-r5Z">
                                <state key="normal" title="Réglages"/>
                                <connections>
                                    <segue destination="M87-qq-Uya" kind="show" identifier="display-settings-by-EntryView" id="3yc-qY-4Zq"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="TD6-NV-92x">
                                <color key="backgroundColor" red="1" green="0.95294117647058818" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
...
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="75" id="D5R-8x-Wdu"/>
                                </constraints>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RkR-5p-M3A">
                                <accessibility key="accessibilityConfiguration" identifier="matches_count"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joueur 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVg-dV-h7u">
                                <accessibility key="accessibilityConfiguration" identifier="current_player"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EJZ-9b-ikv">
                                <accessibility key="accessibilityConfiguration" identifier="new-game-button"/>
                                <state key="normal" title="Commencer une nouvelle partie"/>
                                <connections>
                                    <action selector="beginNewGame" destination="BYZ-38-t0r" eventType="touchUpInside" id="1vU-Th-2rn"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDC-j0-SHD">
...
